# axumtest1

./: Cargo.toml  README.md
.github/workflows/: rustbuild.yml
db/migrations/: 0001_model.sql  model.sql
migrations/: 0001_model.sql  0002_model.sql
src/: main.rs
src/dbmodel/: devices.rs
