[package]
name = "axumtest1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15.7"
#postgres
sqlx = {version = "0.8.6", features = ["runtime-tokio", "mysql","tls-native-tls", "postgres", "macros"]}

#serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.140"}

